--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -9,6 +9,7 @@
 </style>
 
 <div class="example-wrapper">
+<div {{ stimulus_controller('hello') }}>
     <h1>Hello {{ controller_name }}! ✅</h1>
 
     This friendly message is coming from:
